Dodan stupac u tablici akcije koji brise redak na koji se klikne ta akcija

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <th>Predemt</th>
               <th>Godina</th>
               <th>Broj ects</th>
+              <th>Akcije</th>
             </tr>
             
           </table>
