dodan stupac checkbox koji mjenja boju kad se klikne na red

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
               <th>Predemt</th>
               <th>Godina</th>
               <th>Broj ects</th>
-              <th>Akcije</th>
+              <th>Brisanje</th>
+              <th>Check</th>
             </tr>
             
           </table>
