--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
         <br>
         <button id="save" onclick="SaveToTable()">Spremi</button>
 
+        
 <br><br>
+
+<div class="SearchInput">
+  <input type="text" id="myInput" onkeyup="Search()" placeholder="Search for names.." title="Type in a name">
+
+</div>
 
 
         <table id="table">
